Updating Old File for core commit

--- a/help/release-notes/2019/june-2019.md
+++ b/help/release-notes/2019/june-2019.md
@@ -30,24 +30,24 @@ Aktualisierungen vorhandener Funktionen:
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-Adobe Experience Platform [!DNL Data Science Workspace] is a fully managed service within [!DNL Experience Platform] that enables data scientists to seamlessly generate insights from data and content across Adobe solutions and third party systems by building and operationalizing Machine Learning Models. [!DNL Data Science Workspace] ist eng in den End-to-End-Datenwissenschaftslebenszyklus integriert [!DNL Platform] [!DNL Real-time Customer Profile] und ermöglicht diese, einschließlich der Erforschung und Vorbereitung von XDM-Daten, gefolgt von der Entwicklung und Inbetriebnahme von Modellen, um automatisch mit Machine Learning Insights zu bereichern.
+Adobe Experience Platform [!DNL Data Science Workspace] ist ein vollständig verwalteter Dienst innerhalb von [!DNL Experience Platform], der Datenwissenschaftlern die nahtlose Erstellung von Einblicken aus Daten und Inhalten über Adoben- und Drittanbietersysteme hinweg ermöglicht, indem sie maschinelle Lernmodelle erstellen und operationalisieren. [!DNL Data Science Workspace] ist eng in den End-to-End-Datenwissenschaftslebenszyklus integriert  [!DNL Platform] und ermöglicht diese, einschließlich der Erforschung und Vorbereitung von XDM-Daten, gefolgt von der Entwicklung und Operationalisierung von Modellen, um automatisch  [!DNL Real-time Customer Profile] mit Machine Learning Insights zu bereichern.
 
 **Wichtigste Funktionen**
 
 | Funktion | Beschreibung |
 | -----------| ---------- |
-| Bereitstellung und Berechnung der Isolation | Provision dedicated compute resources needed to enable data scientists to execute untrusted code within [!DNL Experience Platform] in a secure manner. |
-| Erstmaliges Benutzererlebnis | Includes out-of-the box samples for various Machine Learning frameworks and languages such as [!DNL Python], R, PySpark and Scala [!DNL Spark]. |
-| Notebooks | Customized environment for data scientists/data engineers powered by [!DNL Jupyter Notebooks] to enable them to prepare data, extract features, and develop ML Models with a curated list of libraries and popular Machine Learning frameworks. |
-| Datenforschung | Seamless access to XDM data ingested into [!DNL Platform] integrated with [!DNL Platform Data Access] SDK. |
-| Datenvisualisierung | Ability to execute SQL queries in [!DNL Jupyter Notebooks] to accelerate data prep and feature engineering. |
+| Bereitstellung und Berechnung der Isolation | Stellen Sie spezielle Rechenressourcen bereit, die erforderlich sind, damit Datenwissenschaftler nicht vertrauenswürdigen Code innerhalb von [!DNL Experience Platform] auf sichere Weise ausführen können. |
+| Erstmaliges Benutzererlebnis | Umfasst vordefinierte Beispiele für verschiedene maschinelle Lernumgebungen und Sprachen wie [!DNL Python], R, PySpark und Scala [!DNL Spark]. |
+| Notebooks | Benutzerdefinierte Umgebung für Datenwissenschaftler/Dateningenieure mit der Leistung [!DNL Jupyter Notebooks], um sie in die Lage zu versetzen, Daten vorzubereiten, Funktionen zu extrahieren und ML-Modelle mit einer kuratierten Liste von Bibliotheken und beliebten maschinellen Lernumgebungen zu entwickeln. |
+| Datenforschung | Nahtloser Zugriff auf XDM-Daten, die in [!DNL Platform] in [!DNL Platform Data Access] SDK integriert sind. |
+| Datenvisualisierung | Möglichkeit, SQL-Abfragen in [!DNL Jupyter Notebooks] auszuführen, um die Datenvorbereitung und Feature Engineering zu beschleunigen. |
 | Funktions-Pipelines | API/SDK für Scala/PySpark zur Bereitstellung von Funktionsentwicklungs-Pipelines zur Umwandlung von Kern-XDM-Daten in Funktionsschemas. |
-| Modellerstellung | Vorlagen und Laufzeitumgebungen, die es Datenwissenschaftlern ermöglichen, sich auf die Modellentwicklung zu konzentrieren, ohne Infrastruktur-Code für den Zugriff auf Daten und die Berechnung von Ressourcen implementieren zu müssen. You can import model code and operationalize it to derive Insights from data in [!DNL Platform]. |
+| Modellerstellung | Vorlagen und Laufzeitumgebungen, die es Datenwissenschaftlern ermöglichen, sich auf die Modellentwicklung zu konzentrieren, ohne Infrastruktur-Code für den Zugriff auf Daten und die Berechnung von Ressourcen implementieren zu müssen. Sie können Modellcode importieren und operalisieren, um Insights von Daten in [!DNL Platform] abzuleiten. |
 | Management von Unternehmensmodellen | Unterstützung von Datenmodellen mit mehreren Mandanten zur Nachverfolgung von Modellversionen und dazugehörigen Hyperparameterkonfigurationen, um die Grundlage für das Partner-Ökosystem zu schaffen. |
-| Modellbewertung | Evaluate and optimize regression and classification models in [!DNL Python], PySpark, R, and Scala. |
+| Modellbewertung | Bewerten und optimieren Sie Regressions- und Classification-Modelle in [!DNL Python], PySpark, R und Scala. |
 | Modellimplementierung | Möglichkeit zum Vergleichen von Bewertungsmetriken und -konfigurationen über mehrere Experimentiervorgänge hinweg und zum Veröffentlichen des optimalen Modells als Dienst. |
-| Batch-Bewertung | Enrich [!DNL Real-time Customer Profile] with Machine Learning insights or write them as datasets back to [!DNL Platform] |
-| Zeitplan | Integrated with [!DNL Platform] Orchestration Service to automate Model training, scoring, and feature pipelines with user-defined schedules through APIs. |
+| Batch-Bewertung | Bereichern Sie [!DNL Real-time Customer Profile] durch maschinelles Lernen oder schreiben Sie sie als Datensätze zurück zu [!DNL Platform] |
+| Zeitplan | Integration mit [!DNL Platform] Orchestration Service zur Automatisierung von Modellschulungen, -bewertungen und -funktionen mit benutzerdefinierten Zeitplänen über APIs. |
 
 **Bekannte Probleme**
 
@@ -57,7 +57,7 @@ Weitere Informationen finden Sie unter [Data Science Workspace – Überblick](.
 
 ## [!DNL Decisioning Service] {#decisioning}
 
-Adobe Experience Platform [!DNL Decisioning Service] provides the ability to programmatically and intelligently select the ‘Next Best Experience’ from a set of available options for a given individual, deliver them to any channel or application, and perform reporting and analysis.
+Adobe Experience Platform [!DNL Decisioning Service] bietet die Möglichkeit, programmatisch und intelligent das &quot;Nächste beste Erlebnis&quot;aus einer Reihe verfügbarer Optionen für eine bestimmte Person auszuwählen, sie an einen beliebigen Kanal oder eine Anwendung zu senden und Berichte und Analyse auszuführen.
 
 Ein vordefiniertes Rich-Data-Modell ermöglicht die Verwendung der Entscheidungsfindung für das „nächstbeste Angebot“ unabhängig vom Kanal.
 
@@ -67,24 +67,24 @@ Ein vordefiniertes Rich-Data-Modell ermöglicht die Verwendung der Entscheidungs
 | -----------| ---------- |
 | Business Object Repository | Ein Repository, das von JSON-Schema-Modellen gesteuert wird, ermöglicht es einem Entwickler, eine Vielzahl von Geschäftsobjekten zu erstellen, zu lesen, zu aktualisieren und zu löschen. Das Repository bietet umfassende Abfrage-APIs sowie eine schemabasierte Suche. |
 | Repository-Container | Innerhalb des Business Object Repositorys kann ein Entwickler seine Bedenken in Bezug auf Projekte, geschäftliche oder organisatorische Einheiten oder die Lebenszyklusphasen eines Projekts isolieren (z. B. in der Entwicklung und Integration, beim Staging oder bei der Live-Produktion). Diese Isolationen werden als Repository-Container bezeichnet. |
-| Rollen und Berechtigungen | Using the [!DNL Admin Console], an organization can create and manage profiles to grant targeted access to resources by type, access operation, and container. Benutzer können diesen Profilen hinzugefügt werden und effektive Zugriffsberechtigungen werden automatisch aus diesen Richtlinien berechnet. |
-| Vordefiniertes Angebots-Objektmodell | Without the need to first build a data model, a [!DNL Platform] developer can leverage prebuilt JSON schemas and relationships to create an offer catalog, define decision rules and constraints, and assemble offer collections for decisioning. |
-| Entscheidungsregeln auf der Grundlage von Profil- und Nicht-Profil-Daten | A tight integration with the [!DNL Real-time Customer Profile] allows a developer to create decision rules that leverage Profile data. Entscheidungen können nicht nur mit Profilattributen getroffen werden, sondern auch anhand des Erlebnisverlaufs eines Profils und auf der Grundlage von Geschäftseinheiten, die nicht mit einer Benutzeridentität (z. B. Traffic-Ereignisse, Produktbestand) in Verbindung stehen. Any [!DNL Experience Data Model] (XDM) entity for which a schema exists in the [!DNL Schema Registry] can be used for the decision rules. Regeln sind erstklassige Entitäten und können für beliebige Entscheidungsoptionen und Aktivitäten wiederverwendet werden. |
+| Rollen und Berechtigungen | Mit dem [!DNL Admin Console] kann ein Unternehmen Profil erstellen und verwalten, um zielgerichteten Zugriff auf Ressourcen nach Typ, Zugriffsvorgang und Container zu gewähren. Benutzer können diesen Profilen hinzugefügt werden und effektive Zugriffsberechtigungen werden automatisch aus diesen Richtlinien berechnet. |
+| Vordefiniertes Angebots-Objektmodell | Ohne dass zunächst ein Datenmodell erstellt werden muss, kann ein [!DNL Platform]-Entwickler vorgefertigte JSON-Schema und -Beziehungen nutzen, um einen Angebotskatalog zu erstellen, Entscheidungsregeln und -einschränkungen zu definieren und Angebot-Sammlungen für die Entscheidungsfindung zusammenzustellen. |
+| Entscheidungsregeln auf der Grundlage von Profil- und Nicht-Profil-Daten | Eine enge Integration mit dem [!DNL Real-time Customer Profile] ermöglicht es einem Entwickler, Entscheidungsregeln zu erstellen, die Profil-Daten nutzen. Entscheidungen können nicht nur mit Profilattributen getroffen werden, sondern auch anhand des Erlebnisverlaufs eines Profils und auf der Grundlage von Geschäftseinheiten, die nicht mit einer Benutzeridentität (z. B. Traffic-Ereignisse, Produktbestand) in Verbindung stehen. Jede [!DNL Experience Data Model] (XDM) Entität, für die ein Schema in [!DNL Schema Registry] vorhanden ist, kann für die Entscheidungsregeln verwendet werden. Regeln sind erstklassige Entitäten und können für beliebige Entscheidungsoptionen und Aktivitäten wiederverwendet werden. |
 | Rangfolge und Begrenzung | Entscheidungsoptionen, die alle Voraussetzungen und sonstigen Einschränkungen für einen bestimmten Benutzer erfüllen, werden nach Rang geordnet und die beste Option wird ausgewählt. Zusätzliche Einschränkungen pro Benutzer und globale Begrenzungseinschränkungen der Verfügbarkeit der verfügbaren Optionen können verwendet werden, um eine Personalisierung unter Berücksichtigung von Ressourcenbeschränkungen und Benutzermüdigkeit zu ermöglichen. |
-| [!DNL Decisioning] REST-APIs | The [!DNL Decisioning Service] can be invoked using a simple REST API to get the Next Best Offer for a given individual. Eine Metrik-API kann zur Überprüfung von Echtzeit-Angebotsvorschlägen und zum Begrenzen von Werten verwendet werden. |
-| Streaming von Entscheidungs-Ereignissen in [!DNL Data Lake] und [!DNL Query Service] | The [!DNL Decisioning Service] auto-creates datasets to stream all XDM Decision Events automatically into the [!DNL Data Lake]. The datasets are then available for analysis and reporting using [!DNL Query Service]. |
+| [!DNL Decisioning] REST-APIs | Das [!DNL Decisioning Service] kann mit einer einfachen REST-API aufgerufen werden, um das nächste Best-Angebot für eine bestimmte Person abzurufen. Eine Metrik-API kann zur Überprüfung von Echtzeit-Angebotsvorschlägen und zum Begrenzen von Werten verwendet werden. |
+| Streaming-Entscheidungs-Ereignis in [!DNL Data Lake] und [!DNL Query Service] | Mit [!DNL Decisioning Service] werden automatisch Datensätze erstellt, um alle XDM-Decision-Ereignis automatisch in [!DNL Data Lake] zu streamen. Die Datensätze stehen dann für Analyse und Berichte mit [!DNL Query Service] zur Verfügung. |
 | Entwicklerunterstützung | Self-Service-Teilnahme mit Dokumentation zu Adobe I/O, einschließlich Tutorials zu verschiedenen Themen. |
 
 **Bekannte Probleme**
 
-* The offer data model is not exposed through the [!DNL Schema Registry] and can therefore only be extended in limited ways. Das Modellschema verfügt über integrierte Strukturen, mit denen benutzerdefinierte Daten angehängt werden können. In Zukunft können Sie eine Basis-XDM-Modellklasse erweitern, um Ihre eigenen benutzerdefinierten Entscheidungsfindungs-Domänen zu definieren.
+* Das Angebot-Datenmodell wird nicht über das [!DNL Schema Registry] offen gelegt und kann daher nur in begrenzter Weise erweitert werden. Das Modellschema verfügt über integrierte Strukturen, mit denen benutzerdefinierte Daten angehängt werden können. In Zukunft können Sie eine Basis-XDM-Modellklasse erweitern, um Ihre eigenen benutzerdefinierten Entscheidungsfindungs-Domänen zu definieren.
 * Sie müssen über das Domänenmodell der Angebotsverwaltung verfügen und Benutzer und Integrationen müssen in diesem Produktkontext verwaltet werden.
 
 ## [!DNL Query Service] {#query}
 
-[!DNL Query Service]Mit können Sie in Adobe Experience Platform standardmäßige SQL-Daten zur Abfrage zu verwenden, um viele verschiedene Anwendungsfälle für Analyse und Daten-Management zu unterstützen. It is a serverless tool which allows you to join any datasets in the [!DNL Data Lake] and capture the query results as a new dataset for use in reporting, [!DNL Data Science Workspace], or for ingestion into [!DNL Profile Service].
+[!DNL Query Service]Mit können Sie in Adobe Experience Platform standardmäßige SQL-Daten zur Abfrage zu verwenden, um viele verschiedene Anwendungsfälle für Analyse und Daten-Management zu unterstützen. Es handelt sich dabei um ein serverloses Tool, mit dem Sie beliebige Datensätze in das [!DNL Data Lake] einbinden und die Abfragen als neues Dataset erfassen können, das in Berichte, [!DNL Data Science Workspace] oder zur Aufnahme in [!DNL Profile Service] verwendet werden kann.
 
-You can use [!DNL Query Service] to build data analysis ecosystems, creating a picture of consumers across their various interaction channels. Diese Kanäle können Folgendes umfassen:
+Sie können [!DNL Query Service] verwenden, um Ökosysteme für die Analyse von Daten zu erstellen und so ein Bild von den Verbrauchern über ihre verschiedenen Interaktionskennzeichen zu erstellen. Diese Kanäle können Folgendes umfassen:
 
 * Point-of-Sale-System
 * Web
@@ -96,12 +96,12 @@ You can use [!DNL Query Service] to build data analysis ecosystems, creating a p
 | Funktion | Beschreibung |
 | -----------| ---------- |
 | Abfrageeditor | Verwenden Sie ein Web-basiertes Tool, um Abfragen zu schreiben, zu validieren, zu testen und auszuführen. Es enthält eine Konsole für detaillierte Informationen über die Durchführung von Abfragen sowie die Möglichkeit, die Abfrageergebnisse als Vorschau anzuzeigen. |
-| Datensatz-Erstellung | Create datasets on [!DNL Experience Platform] via standard SQL syntax. |
+| Datensatz-Erstellung | Erstellen Sie Datensätze für [!DNL Experience Platform] über die SQL-Standardsyntax. |
 | Adobe-definierte Funktionen | Nutzen Sie Verknüpfungsfunktionen für gängige Aufgaben wie das Identifizieren von Sitzungen oder das Festlegen von Attribution. |
-| BI-Tool-Konnektivität | Use the PostgreSQL (Postgres) drivers found in common BI tools to connect to [!DNL Query Service] to create reports and visualizations. Zu den unterstützten Tools gehören: [!DNL Tableau], [!DNL Power BI]und [!DNL Looker]. Authentifizierungsinformationen finden Sie auf der Registerkarte „Berechtigungen“. |
-| Konnektivität des Datenbank-Management-Tools | Connect [!DNL Aqua Data Studio] or [!DNL DB Visualizer] to [!DNL Query Service] for data exploration and dataset creation functionality. [!DNL Query Service] unterstützt auch Konnektivität von R Studio. Authentifizierungsinformationen finden Sie auf der Registerkarte „Berechtigungen“. |
+| BI-Tool-Konnektivität | Verwenden Sie die PostgreSQL (Postgres) Treiber, die in gängigen BI-Werkzeugen gefunden werden, um eine Verbindung zu [!DNL Query Service] herzustellen, um Berichte und Visualisierungen zu erstellen. Zu den unterstützten Tools gehören: [!DNL Tableau], [!DNL Power BI] und [!DNL Looker]. Authentifizierungsinformationen finden Sie auf der Registerkarte „Berechtigungen“. |
+| Konnektivität des Datenbank-Management-Tools | Verbinden Sie [!DNL Aqua Data Studio] oder [!DNL DB Visualizer] mit [!DNL Query Service], um die Funktionen zur Datenexploration und Dataset-Erstellung zu nutzen. [!DNL Query Service] unterstützt auch Konnektivität von R Studio. Authentifizierungsinformationen finden Sie auf der Registerkarte „Berechtigungen“. |
 | Befehlszeilen-Abfrage-Tool | Stellen Sie eine Verbindung zu PSQL her, um Abfragen über die Befehlszeile ausführen zu können. |
-| Abfrage-Protokoll | Keeps a history of queries executed by [!DNL Query Service] and enables you to find prior SQL for editing, execution, or for creating a dataset out of the results. |
+| Abfrage-Protokoll | Verfolgt Abfragen, die von [!DNL Query Service] ausgeführt werden, und ermöglicht es Ihnen, frühere SQL zur Bearbeitung, Ausführung oder zum Erstellen eines Datensatzes aus den Ergebnissen zu finden. |
 | API zur Abfrageplanung | Planen Sie Abfragen für die wiederholte Ausführung über diese API. |
 
 **Bekannte Probleme**
@@ -109,17 +109,17 @@ You can use [!DNL Query Service] to build data analysis ecosystems, creating a p
 * [!DNL Query Editor] zeigt ein Beispiel von 100 Ergebniszeilen für Ihre Abfragen. Um die vollständige Ergebnismenge beizubehalten, verwenden Sie die Datensatz-Erstellungsfunktionen aus dem Abfrage-Protokoll.
 * In künftigen Versionen werden Ansichten und eine Benutzeroberfläche für die Anwendung von Zeitplänen auf Abfragen unterstützt.
 
-For more information about [!DNL Query Service], see the [product documentation](../../query-service/home.md).
+Weitere Informationen zu [!DNL Query Service] finden Sie in der [Produktdokumentation](../../query-service/home.md).
 
 ## [!DNL Experience Data Model] (XDM) {#xdm}
 
-Standardization and interoperability are key concepts behind [!DNL Experience Platform]. [!DNL Experience Data Model] (XDM), angetrieben von der Adobe, ist ein Versuch, Kundenerlebnisdaten zu standardisieren und Schema für das Kundenerlebnis-Management zu definieren.
+Normung und Interoperabilität sind Schlüsselkonzepte hinter [!DNL Experience Platform]. [!DNL Experience Data Model] (XDM), angetrieben von der Adobe, ist ein Versuch, Kundenerlebnisdaten zu standardisieren und Schema für das Kundenerlebnis-Management zu definieren.
 
 XDM ist eine öffentlich dokumentierte Spezifikation, die die Leistungsfähigkeit digitaler Erlebnisse verbessern soll. Es stellt allgemeine Strukturen und Definitionen für Anwendungen bereit, die mit Diensten in Adobe Experience Platform kommunizieren. Durch die Einhaltung von XDM-Standards können alle Kundenerlebnisdaten in eine gemeinsame Darstellung integriert werden, die Erkenntnisse schneller und besser integriert liefert. Sie können wertvolle Einblicke aus Kundenaktionen gewinnen, Zielgruppen durch Segmente definieren und Kundenattribute für Personalisierungszwecke verwenden.
 
-XDM is the mechanism that allows [!DNL Experience Cloud], powered by Adobe Experience Platform, to deliver the right message to the right person, on the right channel, at exactly the right moment.
+XDM ist der Mechanismus, der es [!DNL Experience Cloud], powered by Adobe Experience Platform, erlaubt, die richtige Nachricht an die richtige Person, auf dem richtigen Kanal, genau im richtigen Moment.
 
-Die [!DNL Experience Platform] zugrunde liegende Methodik [!DNL XDM System] setzt [!DNL Experience Data Model] Schema für die Verwendung durch [!DNL Experience Platform] Bauteile in Betrieb.
+Die Methodik, auf der [!DNL Experience Platform] erstellt wird, [!DNL XDM System] operalisiert [!DNL Experience Data Model]-Schema zur Verwendung durch [!DNL Experience Platform]-Komponenten.
 
 **Neue Funktionen**
 
@@ -134,18 +134,18 @@ Die [!DNL Experience Platform] zugrunde liegende Methodik [!DNL XDM System] setz
 * Das Feld „identityMap“ wurde aus Kontext/Profil und in ein eigenes Mixin verschoben, um die Definition von Identitäten intuitiver zu gestalten.
 * Alle vorhandenen Schemas basierend auf Kontext/Profil mit context/identitymap gepatcht.
 * Die Fehlermeldung, bei der keine Version angegeben war, wurde korrigiert.
-* Fixed bug where [!DNL Schema Registry] was giving random responses for profile union schema calls.
-* Fixed bug where union schemas were not displaying the correct fields in [!DNL Schema Registry].
+* Es wurde ein Fehler behoben, durch den [!DNL Schema Registry] zufällige Antworten für Profil Vereinigung Schema-Aufrufe gab.
+* Es wurde ein Fehler behoben, durch den Vereinigung-Schema nicht die korrekten Felder in [!DNL Schema Registry] anzeigten.
 * Es wurde ein Fehler behoben, durch den Identitätsdeskriptoren gelegentlich nicht mit gültigen Namensräumen erstellt werden konnten.
 * Es wurde ein Dereferenzproblem behoben, bei dem ein Objekt `properties` anstelle von `allOf` verwendete.
 
 **Bekannte Probleme**
 
-* Cannot extend a [!DNL Platform]-supplied mixin by adding a field.
+* Kann ein [!DNL Platform] bereitgestelltes Mixin nicht durch Hinzufügen eines Felds erweitern.
 * Deskriptoren werden nicht gelöscht, wenn ein Mixin aus der Schemakomposition entfernt wird.
 * Es kann kein Enum-Feld ohne Beschriftungen erstellt werden.
 
-To learn more about working with XDM using the [!DNL Schema Registry] API and [!DNL Schema Editor], please read the [XDM System documentation](../../xdm/home.md).
+Weitere Informationen zum Arbeiten mit XDM mit der [!DNL Schema Registry]-API und [!DNL Schema Editor] finden Sie in der [XDM-Systemdokumentation](../../xdm/home.md).
 
 ## [!DNL Segmentation Service] {#segmentation}
 
