--- a/help/release-notes/2020/june-2020.md
+++ b/help/release-notes/2020/june-2020.md
@@ -25,7 +25,7 @@ Aktualisierungen vorhandener Funktionen in Adobe Experience Platform:
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-[!DNL Data Science Workspace] nutzt maschinelles Lernen und künstliche Intelligenz, um Erkenntnisse aus Ihren Daten zu entfesseln. Integrated into Adobe Experience Platform, [!DNL Data Science Workspace] helps you make predictions using your content and data assets across Adobe solutions.
+[!DNL Data Science Workspace] nutzt maschinelles Lernen und künstliche Intelligenz, um Erkenntnisse aus Ihren Daten zu entfesseln. In Adobe Experience Platform integriert hilft [!DNL Data Science Workspace] Ihnen bei der Erstellung von Prognosen mit Ihren Inhalten und Daten-Assets in allen Adoben.
 
 [!DNL Data Science Workspace] hat an neuen Wegen gearbeitet, um durch den Einsatz von maschinellem Lernen bessere Erlebnisse und Vorhersagen zu ermöglichen. Echtzeit-maschinelles Lernen bietet die Möglichkeit, benutzerdefinierte oder importierte vorab geschulte maschinelle Lernmodelle in interoperablen Standardmodellformaten zu erstellen, zu testen und bereitzustellen, um eine Echtzeitbewertung/Aktivierung über einen API-Endpunkt zu ermöglichen.
 
@@ -35,11 +35,11 @@ Beachten Sie, dass sich das maschinelle Lernen in Echtzeit in der Alpha-Phase be
 |--- | ---|
 | [!DNL JupyterLab Launcher Real-time ML] Starter | Das [!DNL JupyterLab Launcher] enthält jetzt einen [!DNL Python] Notebook-Starter für [!DNL Real-time Machine Learning] (Alpha). |
 
-Weitere Informationen zum [!DNL Real-time Machine Learning] Alpha finden Sie in der Übersicht über [maschinelles Lernen in Echtzeit](../../data-science-workspace/real-time-machine-learning/home.md).
+Weitere Informationen zum Alpha [!DNL Real-time Machine Learning] finden Sie unter [Übersicht über maschinelles Lernen in Echtzeit](../../data-science-workspace/real-time-machine-learning/home.md).
 
 ## Segmentierung {#segmentation}
 
-Adobe Experience Platform [!DNL Segmentation Service] provides a user interface and RESTful API that allows you to build segments and generate audiences from your [!DNL Real-time Customer Profile] data. These segments are centrally configured and maintained on [!DNL Platform], making them readily accessible by any Adobe application.
+Adobe Experience Platform [!DNL Segmentation Service] bietet eine Benutzeroberfläche und RESTful-API, mit der Sie Segmente erstellen und Audiencen aus Ihren [!DNL Real-time Customer Profile]-Daten generieren können. Diese Adoben werden zentral auf [!DNL Platform] konfiguriert und gepflegt, sodass sie für jede Anwendung leicht zugänglich sind.
 
 [!DNL Segmentation Service] definiert eine bestimmte Untergruppe von Profilen, indem das Kriterium beschrieben wird, das eine vermarktbare Personengruppe innerhalb Ihres Kundenstamms unterscheidet. Segmente können auf Datensatzdaten (z. B. demografische Daten) oder Zeitreihenereignissen basieren, die Kundeninteraktionen mit Ihrer Marke darstellen.
 
@@ -49,11 +49,11 @@ Adobe Experience Platform [!DNL Segmentation Service] provides a user interface 
 | ------- | ----------- |
 | Datumsfelder | Eine Funktion zum &quot;Jubiläum&quot;für Datumsfunktionen wurde hinzugefügt, mit der Benutzer Daten ohne Jahr bewerten können. |
 
-For more information on Segmentation, please see the [Segmentation overview](../../segmentation/home.md)
+Weitere Informationen zur Segmentierung finden Sie in der [Segmentierungsübersicht](../../segmentation/home.md)
 
 ## Quellen {#sources}
 
-Adobe Experience Platform can ingest data from external sources while allowing you to structure, label, and enhance that data using [!DNL Platform] services. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
+Adobe Experience Platform kann Daten aus externen Quellen erfassen, während Sie diese Daten mithilfe der [!DNL Platform]-Dienste strukturieren, beschriften und erweitern können. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
 
 [!DNL Experience Platform]Im Rahmen von stehen eine RESTful-API und interaktive Benutzeroberfläche zur Verfügung, mit deren Hilfe Sie auf unkomplizierte Weise Verbindungen zu Datenquellen verschiedener Anbieter einrichten können. Mit diesen Quellverbindungen können Sie sich authentifizieren und eine Verbindung zu externen Datenspeichern und CRM-Diensten herstellen, Zeiten für Erfassungsläufe festlegen und den Durchsatz der Datenerfassung verwalten.
 
