Updating Old File for core commit 645060ff117e61c244e75f9f4a239570af8222fc

--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -1,13 +1,13 @@
 ---
 keywords: Experience Platform;Home;beliebte Themen;Amazon S3;Amazon s3;S3;s3
 solution: Experience Platform
-title: Amazon S3-Anschluss
+title: Übersicht über den Amazon S3 Source Connector
 topic: overview
-description: In der folgenden Dokumentation finden Sie Informationen dazu, wie eine Verbindung zwischen S3 und Plattform mithilfe von APIs oder der Benutzeroberfläche hergestellt werden kann.
+description: Erfahren Sie, wie Sie S3 mit Adobe Experience Platform über APIs oder die Benutzeroberfläche verbinden.
 translation-type: tm+mt
-source-git-commit: 2940f030aa21d70cceeedc7806a148695f68739e
+source-git-commit: a489ab248793a063295578943ad600d8eacab6a2
 workflow-type: tm+mt
-source-wordcount: '397'
+source-wordcount: '399'
 ht-degree: 3%
 
 ---
@@ -36,15 +36,15 @@ Im Folgenden finden Sie eine Liste von Einschränkungen, die Sie bei der Benennu
 
 ## S3 an [!DNL Platform] anschließen
 
-In der folgenden Dokumentation finden Sie Informationen zum Verbinden von S3 mit der Plattform mithilfe von APIs oder der Benutzeroberfläche:
+In der folgenden Dokumentation finden Sie Informationen zum Herstellen einer Verbindung zwischen S3 und Adobe Experience Platform mithilfe von APIs oder der Benutzeroberfläche:
 
 ### APIs verwenden
 
-- [Erstellen eines S3-Connectors mit der Flow Service API](../../tutorials/api/create/cloud-storage/s3.md)
+- [Erstellen einer S3-Quellverbindung mit der Flow Service API](../../tutorials/api/create/cloud-storage/s3.md)
 - [Kennenlernen eines Cloud-Datenspeicherung-Systems mithilfe der Flow Service API](../../tutorials/api/explore/cloud-storage.md)
 - [Erfassen von Cloud-Datenspeicherung-Daten mithilfe der Flow Service API](../../tutorials/api/collect/cloud-storage.md)
 
 ### Verwenden der UI
 
-- [Amazon S3-Quellanschluss in der Benutzeroberfläche erstellen](../../tutorials/ui/create/cloud-storage/s3.md)
-- [Konfigurieren eines Datenflusses für einen Cloud-Datenspeicherung-Connector in der Benutzeroberfläche](../../tutorials/ui/dataflow/batch/cloud-storage.md)
+- [Erstellen einer Amazon S3-Quellverbindung in der Benutzeroberfläche](../../tutorials/ui/create/cloud-storage/s3.md)
+- [Konfigurieren eines Datenflusses für eine Cloud-Datenspeicherung-Verbindung in der Benutzeroberfläche](../../tutorials/ui/dataflow/batch/cloud-storage.md)
