Updating Old File for core commit 645060ff117e61c244e75f9f4a239570af8222fc

--- a/help/sources/tutorials/ui/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/ui/create/cloud-storage/s3.md
@@ -1,20 +1,20 @@
 ---
 keywords: Experience Platform;Home;beliebte Themen;S3;se;Amazon S3;amazon s3
 solution: Experience Platform
-title: Amazon S3-Quellanschluss in der Benutzeroberfläche erstellen
+title: Amazon S3-Quellverbindung in der Benutzeroberfläche erstellen
 topic: overview
 type: Tutorial
-description: In diesem Lernprogramm werden Schritte zum Erstellen eines Amazon S3-Quellconnectors (im Folgenden "S3") mithilfe der Plattform-Benutzeroberfläche beschrieben.
+description: Erfahren Sie, wie Sie eine Amazon S3-Quellverbindung über die Adobe Experience Platform-Benutzeroberfläche erstellen.
 translation-type: tm+mt
-source-git-commit: f86f7483e7e78edf106ddd34dc825389dadae26a
+source-git-commit: c7fb0d50761fa53c1fdf4dd70a63c62f2dcf6c85
 workflow-type: tm+mt
-source-wordcount: '566'
+source-wordcount: '560'
 ht-degree: 10%
 
 ---
 
 
-# Erstellen eines [!DNL Amazon] S3-Quellconnectors in der Benutzeroberfläche
+# Erstellen einer S3-Quellverbindung in der Benutzeroberfläche[!DNL Amazon]
 
 Die Source Connectors in Adobe Experience Platform bieten die Möglichkeit, extern beschaffte Daten planmäßig zu erfassen. In diesem Lernprogramm werden Schritte zum Erstellen eines [!DNL Amazon] S3-Quellconnectors (im Folgenden &quot;S3&quot;) mithilfe der [!DNL Platform]-Benutzeroberfläche beschrieben.
 
