Updating Old File for core commit 645060ff117e61c244e75f9f4a239570af8222fc

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -1,20 +1,20 @@
 ---
 keywords: Experience Platform;Home;beliebte Themen;Amazon S3;s3;S3
 solution: Experience Platform
-title: Erstellen eines Amazon S3-Connectors mit der Flow Service API
+title: Erstellen einer Amazon S3-Quellverbindung mit der Flow Service API
 topic: overview
 type: Tutorial
-description: In diesem Lernprogramm wird die Flow Service API verwendet, um Sie durch die Schritte zu führen, mit denen Sie die Experience Platform mit einer Amazon S3-Datenspeicherung (im Folgenden "S3") verbinden.
+description: Erfahren Sie, wie Sie Adobe Experience Platform mit der Flow Service API mit Amazon S3 verbinden.
 translation-type: tm+mt
-source-git-commit: 2940f030aa21d70cceeedc7806a148695f68739e
+source-git-commit: a489ab248793a063295578943ad600d8eacab6a2
 workflow-type: tm+mt
-source-wordcount: '593'
-ht-degree: 25%
+source-wordcount: '583'
+ht-degree: 26%
 
 ---
 
 
-# Erstellen Sie einen [!DNL Amazon] S3-Connector mit der [!DNL Flow Service]-API
+# Erstellen Sie eine [!DNL Amazon] S3-Quellverbindung mit der [!DNL Flow Service]-API
 
 [!DNL Flow Service] wird zur Erfassung und Zentralisierung von Kundendaten aus unterschiedlichen Quellen innerhalb von Adobe Experience Platform verwendet. Der Dienst stellt eine Benutzeroberfläche und eine RESTful-API bereit, über die alle unterstützten Quellen verbunden werden können.
 
