--- a/help/release-notes/2019/july-2019.md
+++ b/help/release-notes/2019/july-2019.md
@@ -38,7 +38,7 @@ Adobe Experience Platform [!DNL Privacy Service] stellt eine RESTful-API und ein
 |---|---|
 | [!DNL Privacy Service] Benutzeroberfläche (Benutzeroberfläche) | Das neue Dashboard für die GDPR-Anforderungsmetriken bietet Einblick in gesendete GDPR-Anforderungen, einschließlich ob diese abgeschlossen wurden oder ein Fehler zurückgegeben wurde. |
 | Anforderungs-Builder erstellen | Um Unternehmen mit nicht-technischen und technischen Benutzern, die GDPR-Anforderungen einreichen, zu unterstützen, wurde der Benutzeroberfläche die Funktion &quot;Anforderung erstellen&quot;hinzugefügt. Die JSON-Dateisendefunktion ist in der [!DNL Privacy Service]-Benutzeroberfläche weiterhin für diejenigen Organisationen verfügbar, die sie weiterhin verwenden möchten. |
-| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe I/O-Ereignis nutzen, die an einen konfigurierten Web-Haken gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Benutzer der Benutzeroberfläche [!DNL Privacy Service] können Adobe I/O GDPR-Ereignis abonnieren, um Updates zu erhalten, wenn ein Produkt oder der GDPR-Auftrag abgeschlossen wurde. |
+| Ereignisbenachrichtigungen für DSGVO-Aufträge | Ereignisbenachrichtigungen über den DSGVO-Auftragsstatus sind für viele Workflows von entscheidender Bedeutung. Zuvor wurden Benachrichtigungen mit einzelnen E-Mail-Benachrichtigungen gesendet. Mit der Abkehr von der E-Mail sind GDPR-Ereignis-Benachrichtigungen Nachrichten, die Adobe I/O-Ereignis nutzen, die an einen konfigurierten WebHook gesendet werden, der die Automatisierung von Auftragsanforderungen erleichtert. Benutzer der Benutzeroberfläche [!DNL Privacy Service] können Adobe I/O GDPR-Ereignis abonnieren, um Updates zu erhalten, wenn ein Produkt oder der GDPR-Auftrag abgeschlossen wurde. |
 
 **Fehlerkorrekturen**
 
