Updating Old File for core commit

--- a/help/release-notes/2019/june-2019.md
+++ b/help/release-notes/2019/june-2019.md
@@ -82,7 +82,7 @@ Ein vordefiniertes Rich-Data-Modell ermöglicht die Verwendung der Entscheidungs
 
 ## [!DNL Query Service] {#query}
 
-[!DNL Query Service]Mit können Sie in Adobe Experience Platform standardmäßige SQL-Daten zur Abfrage zu verwenden, um viele verschiedene Anwendungsfälle für Analyse und Daten-Management zu unterstützen. Es handelt sich dabei um ein serverloses Tool, mit dem Sie beliebige Datensätze in das [!DNL Data Lake] einbinden und die Abfragen als neues Dataset erfassen können, das in Berichte, [!DNL Data Science Workspace] oder zur Aufnahme in [!DNL Profile Service] verwendet werden kann.
+[!DNL Query Service]Mit können Sie in Adobe Experience Platform standardmäßige SQL-Daten zur Abfrage zu verwenden, um viele verschiedene Anwendungsfälle für Analyse und Daten-Management zu unterstützen. Es handelt sich dabei um ein serverloses Tool, mit dem Sie alle Datensätze in das [!DNL Data Lake] einbinden und die Abfragen als neues Dataset erfassen können, das in Berichte, [!DNL Data Science Workspace] oder zur Aufnahme in [!DNL Profile Service] verwendet werden kann.
 
 Sie können [!DNL Query Service] verwenden, um Ökosysteme für die Analyse von Daten zu erstellen und so ein Bild von den Verbrauchern über ihre verschiedenen Interaktionskennzeichen zu erstellen. Diese Kanäle können Folgendes umfassen:
 
