Updating Old File for core commit

--- a/help/release-notes/2019/may-2019.md
+++ b/help/release-notes/2019/may-2019.md
@@ -150,7 +150,7 @@ Adobe Experience Platform unterstützt die Integration mit Datenverarbeitungstoo
 | Funktion | Beschreibung |
 | -----------| ---------- |
 | ETL-Connectoren | Anbieter wie Unifi, Informatica, TMM Data und SnapLogic bieten Connectoren zur sicheren Anbindung ihrer Datenverarbeitungstools an Adobe Experience Platform. |
-| ETL-Integration | [!DNL Experience Platform] angebots ETL-Integrationsdokumentation für Benutzer, die einen sicheren Connector zum Extrahieren, Transformieren und Laden von Daten erstellen möchten  [!DNL Platform]. |
+| ETL-Integration | [!DNL Experience Platform] Angebots ETL-Integrationsdokumentation für Benutzer, die einen sicheren Connector zum Extrahieren, Transformieren und Laden von Daten erstellen möchten  [!DNL Platform]. |
 
 **Bekannte Probleme**
 
